plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
    id "de.undercouch.download" version "5.3.0"
}

group = 'technology.nrkk.demo'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.session:spring-session-jdbc'
    implementation 'org.thymeleaf:thymeleaf-spring5:3.1.2.RELEASE'
    implementation 'org.projectlombok:lombok:1.18.28'
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'com.newrelic.agent.java:newrelic-api:8.18.0'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.security:spring-security-test'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

bootRun {
    jvmArgs = ["-javaagent:/Users/tazuma/develop/Pelecanidae/frontservice/newrelic/newrelic.jar"]
}
tasks.named('test') {
    useJUnitPlatform()
    reports {
        junitXml.required.set(true)
    }
}

task downloadNewrelic(type: Download) {
    mkdir 'newrelic'
    src 'https://download.newrelic.com/newrelic/java-agent/newrelic-agent/8.18.0/newrelic-java.zip'
    dest file('newrelic')
}

task unzipNewrelic(type: Copy) {
    from zipTree(file('newrelic/newrelic-java.zip'))
    into rootDir
}